--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          yum -y install poco-devel* zip boost1.78-devel urdfdom-devel fmt-devel
+          yum -y install poco-devel* zip boost1.78-devel urdfdom-devel fmt-devel gcc-g++
           LIBFRANKA_VERSION=${{ inputs.libfranka-version }} ./docker/common/install-dependencies
 
       - name: Setting up pip
