Disabled tests as there are currently no tests

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -32,5 +32,5 @@ jobs:
           cmake ..
           make -j2
 
-      - name: Test
-        run: make test
+#      - name: Test
+#        run: make test
