Added Panda limits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ if (${Franka_VERSION} VERSION_GREATER_EQUAL "0.9.0")
     add_compile_definitions(FRANKA_0_9)
 endif ()
 
+if (${Franka_VERSION} VERSION_GREATER_EQUAL "0.10.0")
+    add_compile_definitions(FRANKA_0_10)
+endif ()
+
 if (${Franka_VERSION} VERSION_GREATER_EQUAL "0.15.0")
     add_compile_definitions(FRANKA_0_15)
 endif ()
